more first page content

--- a/_includes/iframe.html
+++ b/_includes/iframe.html
@@ -1,1 +1,1 @@
-<iframe src="/games/{{page.game}}.html" width="{{page.width}}" height="{{page.height}}" style="margin: auto; display: block;"></iframe>
+<iframe src="/games/{{page.game}}.html" width="{{page.width}}" height="{{page.height}}" style="margin: auto; display: block;" allow="autoplay"></iframe>
