remove scrollbar from iframe

--- a/_includes/iframe.html
+++ b/_includes/iframe.html
@@ -11,7 +11,7 @@
 </style>
 
 <div id="game-desktop">
-<iframe src="/games/{{page.game}}.html" width="{{page.width}}" height="{{page.height}}" style="margin: auto; display: block;" allow="autoplay"></iframe>
+<iframe src="/games/{{page.game}}.html" width="{{page.width}}" height="{{page.height}}" style="margin: auto; display: block;" allow="autoplay" scrolling="no"></iframe>
 </div>
 <div id="game-mobile">
 <iframe width="560" height="315" src="{{page.youtube}}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="margin: auto; display: block;"></iframe>
