--- a/_layouts/game.html
+++ b/_layouts/game.html
@@ -5,6 +5,6 @@ layout: default
     <section id="main_content" class="inner">
       {{ content }}
     </section>
-    <section id="main_content" style="padding: 20px 10px;">
+    <section class="img">
     {% include iframe.html %}
     </section>
